polychem/src/atoms/snapshots/polychem__atoms__composition_parser__tests__chemical_composition-12.snap
---
source: polychem/src/atoms/composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Chlorine-37",
            5,
        ),
    ],
    Some(
        (
            Remove,
            2,
            "Proton",
        ),
    ),
)
