polychem/src/atoms/snapshots/polychem__atoms__composition_parser__tests__chemical_composition-3.snap
---
source: polychem/src/atoms/composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Oxygen",
            1,
        ),
        (
            "Hydrogen",
            1,
        ),
    ],
    Some(
        (
            Add,
            1,
            "Electron",
        ),
    ),
)
