polychem/src/atoms/snapshots/polychem__atoms__composition_parser__tests__chemical_composition-4.snap
---
source: polychem/src/atoms/composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Sodium",
            1,
        ),
    ],
    Some(
        (
            Remove,
            1,
            "Electron",
        ),
    ),
)
