polychem/src/atoms/snapshots/polychem__atoms__composition_parser__tests__chemical_composition-5.snap
---
source: polychem/src/atoms/composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Nitrogen",
            1,
        ),
        (
            "Hydrogen",
            3,
        ),
    ],
    Some(
        (
            Add,
            1,
            "Proton",
        ),
    ),
)
