polychem/src/atoms/snapshots/polychem__atoms__composition_parser__tests__chemical_composition-6.snap
---
source: polychem/src/atoms/composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Chromium",
            2,
        ),
        (
            "Oxygen",
            7,
        ),
    ],
    Some(
        (
            Add,
            2,
            "Electron",
        ),
    ),
)
