polychem/src/atoms/snapshots/polychem__atoms__composition_parser__tests__chemical_composition-8.snap
---
source: polychem/src/atoms/composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Deuterium",
            2,
        ),
        (
            "Oxygen",
            1,
        ),
    ],
    None,
)
